--- a/PM566HW3.Rmd
+++ b/PM566HW3.Rmd
@@ -1,28 +1,122 @@
 ---
 title: "HW03"
-output: html_document
+output: 
+- html_document
+- github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Instruction
+Using the NCBI API, look for papers that show up under the term "sars-cov-2 trial vaccine." Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r counts}
+library(stringr)
+library(xml2)
+library(httr)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+website <- xml2::read_html("https://pubmed.ncbi.nlm.nih.gov/?term=sars-cov-2+trial+vaccine")
 
-```{r cars}
-summary(cars)
+counts <- xml2::xml_find_first(website, "/html/body/main/div[9]/div[2]/div[2]")
+counts <- as.character(counts)
+stringr::str_extract(counts, "[0-9,]+")
+
 ```
 
-## Including Plots
+I found that there are 560 articles about "sars-cov2 trial vaccine". 
 
-You can also embed plots, for example:
+Using the list of pubmed ids you retrieved, download each papers’ details using the query parameter rettype = abstract. If you get more than 250 ids, just keep the first 250.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r ids}
+query_ids <- GET(
+  url = "https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi",
+  query = list(
+    db  = "pubmed",
+    term = "sars-cov-2 trial vaccine",
+    retmax = 1000
+   )
+)
+
+# Extracting the content of the response of GET
+ids <- content(query_ids)
+
+# Turn the result into a character vector
+ids <- as.character(ids)
+
+# Find all the ids  "[[1]]" :return string vector
+ids <- str_extract_all(ids, "<Id>[0-9]+</Id>")[[1]]
+
+# Remove all the leading and trailing <Id> </Id>. Make use of "|"
+ids <- str_remove_all(ids, "<Id>|</Id>")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+As we did in lab 7. Create a dataset containing the following:
+
+Pubmed ID number,
+Title of the paper,
+Name of the journal where it was published,
+Publication date, and
+Abstract of the paper (if any).
+
+```{r abstract}
+publications <- GET(
+  url   = "https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi",
+  query = list (
+    db      = "pubmed",
+    id      = paste(ids, collapse = ","),
+    retmax  = 1000,
+    rettype = "abstract"
+  )
+) 
+
+# Turning the output into character vector
+publications <- content(publications)
+publications_txt <- as.character(publications)
+
+pub_char_list <- xml_children(publications)
+pub_char_list <- sapply(pub_char_list, as.character)
+
+
+#retrieve abstract
+abstracts <- str_extract(pub_char_list, "<Abstract>(\\n|.)+</Abstract>")
+#remove html text
+abstracts <- str_remove_all(abstracts, "</?[[:alnum:]]+>")
+#remove new line and spaces
+abstracts <- str_replace_all(abstracts, "\\s+"," ")
+
+
+#retrieve journal name
+journal <- str_extract(pub_char_list, "<Title>(\\n|.)+</Title>")
+journal <- str_remove_all(journal, "</?[[:alnum:]]+>")
+journal <- str_replace_all(journal, "\\s+"," ")
+
+#retrieve pubdate
+pubdate <- str_extract(pub_char_list, "<PubDate>(\\n|.)+</PubDate>")
+pubdate <- str_remove_all(pubdate, "</?[[:alnum:]]+>")
+pubdate <- str_replace_all(pubdate,"\\s+"," ")
+
+#retrieve titles
+titles <- str_extract(pub_char_list, "<ArticleTitle>(\\n|.)+</ArticleTitle>")
+titles <- str_remove_all(titles, "</?[[:alnum:]]+>")
+titles <- str_replace_all(titles, "\\s+"," ")
+
+database <- data.frame(
+  PubMedID  = ids,
+  Journal   = journal,
+  PubDate   = pubdate,
+  Title     = titles,
+  Abstract  = abstracts
+)
+
+library(kableExtra)
+kable(database)
+
+```
+
+
+
+
+
+
